code/.deployment/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trip-ing
spec:
  backend:
    serviceName: trip-svc
    servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: trip-svc
spec:
  selector:
    app: trip
  ports:
    - name: http
      port: 80
      targetPort: 8080
